task: dark theme asynch storage works * system theme works

--- a/src/components/localisation/translations/en.json
+++ b/src/components/localisation/translations/en.json
@@ -1,8 +1,6 @@
 {
   "commonTranslations": {
-    "enterGTIN": "Enter GTIN",
-    "gtinHelper": "GTIN",
-    "confirmButton": "Confirm",
-    "cancelButton": "Cancel"
+    "loginButton": "Login",
+    "changeTheme": "Change theme"
   }
 }
