task: switch language works

--- a/src/components/localisation/translations/en.json
+++ b/src/components/localisation/translations/en.json
@@ -1,6 +1,9 @@
 {
   "commonTranslations": {
     "loginButton": "Login",
-    "changeTheme": "Change theme"
+    "changeTheme": "Change theme",
+    "axiosErrorTitle": "Error",
+    "axiosErrorPrefix": "Error details: ",
+    "axiosErrorFallback": "Uknown error occured"
   }
 }
